fix font size issues on smaller devices

--- a/contact.css
+++ b/contact.css
@@ -480,6 +480,13 @@ footer .wrapper {
     }
 }
 
+@media screen and (max-width: 880px) {
+    .contact-header {
+        width: 100vw;
+        text-align: center;
+    }
+}
+
 @media screen and (max-width: 571px) {
     input, textarea {
         width: 75vw;
@@ -488,8 +495,15 @@ footer .wrapper {
 
 @media screen and (max-width: 375px) {
     .bd-text-heading {
-        font-size: 2.3rem;
-       
+        font-size: 2rem;
+    }
+
+    .contact-header {
+        font-size: 2em;
+    }
+
+    .fa-xmark {
+        margin: 30px 60px;
     }
 }
 
